package com.FXChemiEngine.engine;

import com.FXChemiEngine.math.UnityMath.Vector2;
import com.FXChemiEngine.math.UnityMath.Vector3;

public abstract class EngineObject {
    public int id;//id
    public Vector3 rotation;//rotation
    public Vector2 center;//center
    public Vector2 position;//position
}
